k8s/monitoring/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: orbitpay
  labels:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: orbitpay
    app.kubernetes.io/component: monitoring
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: orbitpay
  ports:
    - name: http
      port: 9090
      targetPort: 9090
      protocol: TCP
